--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,26 @@
-# Compiled class file
-*.class
+# Eclipse
+.classpath
+.project
+.settings/
 
-# Log file
-*.log
+# Intellij
+.idea/
+*.iml
+*.iws
 
-# BlueJ files
-*.ctxt
+# vscode
+#.vscode
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Mac
+.DS_Store
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Maven
+target/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Gradle
+build/
+.gradle
+
+**/dependency-reduced-pom.xml
+
+.tox
