--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,10 @@
   <artifactId>otc-sdk-v1</artifactId>
   <version>1.0.0</version>
 
-  <name>OTC SDK for Java parent</name>
+  <name>OTC SDK for Java Parent</name>
   <description>OTC SDK for Java</description>
+  <url>https://github.com/opentelekomcloud-community/otc-java-sdk-v1</url>
+
   <packaging>pom</packaging>
 
   <licenses>
@@ -18,6 +20,12 @@
       <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
+
+  <scm>
+    <connection>scm:git:git@github.com/opentelekomcloud-community/otc-java-sdk-v1.git</connection>
+    <developerConnection>scm:git:git@github.com/opentelekomcloud-community/otc-java-sdk-v1.git</developerConnection>
+    <url>git@github.com/opentelekomcloud-community/otc-java-sdk-v1.git</url>
+  </scm>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,9 +41,12 @@
     <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
     <maven-project-info-reports-plugin.version>3.6.1</maven-project-info-reports-plugin.version>
 
-    <junit-bom.version>5.11.0</junit-bom.version>
-    <com.google.code.gson.version>2.12.0</com.google.code.gson.version>
+    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
 
+    <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
+    
+    <slf4j.version>2.0.16</slf4j.version>
 
   </properties>
 
