--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
 
     <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
-    
+
     <slf4j.version>2.0.16</slf4j.version>
 
   </properties>
@@ -85,6 +85,10 @@
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>${maven-deploy-plugin.version}</version>
+          <configuration>
+            <skip>true</skip>
+          </configuration>
+          <inherited>false</inherited>
         </plugin>
         <!-- site lifecycle, see
         https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
