--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -41,4 +41,22 @@
     </dependency>
   </dependencies>
 
+  <build>
+    
+    <pluginManagement>
+      <plugins>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <configuration>
+            <skip>true</skip>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
+  </build>
+
+
 </project>
