--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.otc.sdk</groupId>
+    <groupId>io.github.opentelekomcloud-community</groupId>
     <artifactId>otc-sdk-v1</artifactId>
     <version>1.0.0</version>
   </parent>
@@ -23,7 +23,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.otc.sdk</groupId>
+      <groupId>io.github.opentelekomcloud-community</groupId>
       <artifactId>otc-sdk-v1-core</artifactId>
       <version>${project.version}</version>
     </dependency>
