MAVEN_GPG_PASSPHRASE

--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,7 @@
             <configuration>
               <doclint>all,-missing</doclint>
               <!-- <doclint>none</doclint> -->
+               <quiet>true</quiet>
             </configuration>
             <executions>
               <execution>
@@ -268,6 +269,7 @@
               <version>${maven-javadoc-plugin.version}</version>
               <configuration>
                 <doclint>all,-missing</doclint>
+                <quiet>true</quiet>
 
               </configuration>
               <executions>
