--- a/core/pom.xml
+++ b/core/pom.xml
@@ -60,6 +60,10 @@
           <groupId>org.bouncycastle</groupId>
           <artifactId>bcprov-jdk15to18</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.openeuler</groupId>
+          <artifactId>jsse</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
