--- a/tox.ini
+++ b/tox.ini
@@ -22,3 +22,10 @@ deps =
     -r{toxinidir}/doc/requirements.txt
 commands =
     sphinx-build -W --keep-going -b html releasenotes/source releasenotes/build/html
+
+[testenv:gh-pages]
+passenv = GH_ACTIONS_*
+deps =
+    -r{toxinidir}/doc/requirements.txt
+commands =
+    sphinx-build -W --keep-going -b html doc/source/ docs/_build/html
